crates/eden-config/tests/cases/migration/fail/v2_minecraft_perks_usernames_1/error.snap
---
source: crates/eden-config/tests/cases.rs
expression: error
input_file: crates/eden-config/tests/cases/migration/fail/v2_minecraft_perks_usernames_1
---
migration failed
|-at crates/eden-config/src/migrations/mod.rs:74:22
|-migrating from v2 to v3 failed
|
|-> error: unknown perk identifier `notch`; expected one of "admins", "contributors", "staff", "members", a Discord snowflake, or a hyphenated Minecraft UUID
      ┌─ <redacted>:1:1
      │
    1 │ [minecraft.perks]
      │ ^^^^^^^^^^^^^^^^^
    2 │ notch = ["it should not successfully migrated"]
      │ ----- Username identifiers are not supported. Use their Discord IDs or Minecraft UUIDs instead.
    
    |-at crates/eden-config/src/migrations/mod.rs:74:22
